--- a/src/assets/config.json
+++ b/src/assets/config.json
@@ -1,3 +1,4 @@
 {
-	"formWriteServiceEndpoint": "http://localhost:3000"
+	"formWriteServiceEndpoint": "http://localhost:3000",
+	"formPath": "h:/Data/repos/ng/DynForm/src/assets/forms"
 }
